--- a/community/src/main/resources/templates/index.html
+++ b/community/src/main/resources/templates/index.html
@@ -139,7 +139,7 @@
 						</div>						
 					</li>
 				</ul>
-				<!-- 分页
+
 				<nav class="mt-5" th:if="${page.rows>0}">
 					<ul class="pagination justify-content-center">
 						<li class="page-item">
@@ -157,7 +157,7 @@
 							<a class="page-link" th:href="@{${page.path}(current=${page.total})}">末页</a>
 						</li>
 					</ul>
-				</nav>	-->
+				</nav>
 			</div>
 		</div>
 
