--- a/community/src/main/resources/templates/site/setting.html
+++ b/community/src/main/resources/templates/site/setting.html
@@ -64,14 +64,15 @@
 			<div class="container p-5 mt-3 mb-3">
 				<!-- 上传头像 -->
 				<h6 class="text-left text-info border-bottom pb-2">上传头像</h6>
-				<form class="mt-5" method="post" enctype="multipart/form-data" th:action="@{/user/upload}">
+				<form class="mt-5" method="post" enctype="multipart/form-data" th:action="@{/user/uploadHeader}">
 					<div class="form-group row mt-4">
 						<label for="head-image" class="col-sm-2 col-form-label text-right">选择头像:</label>
 						<div class="col-sm-10">
 							<div class="custom-file">
-								<input type="file" th:class="|custom-file-input ${error!=null?'is-invalid':''}|" id="head-image" name="multipartFile" lang="es" required="">
+								<input type="file" th:class="|custom-file-input ${error!=null?'is-invalid':''}|"
+									   id="head-image" name="multipartFile" lang="es" required="">
 								<label class="custom-file-label" for="head-image" data-browse="文件">选择一张图片</label>
-								<div class="invalid-feedback" th:text="${error}">
+								<div class="invalid-feedback" th:text="${headerError}">
 									该账号不存在!
 								</div>
 							</div>
@@ -86,12 +87,13 @@
 				</form>
 				<!-- 修改密码 -->
 				<h6 class="text-left text-info border-bottom pb-2 mt-5">修改密码</h6>
-				<form class="mt-5">				
+				<form class="mt-5" method="post" th:action="@{/user/uploadPassword}">
 					<div class="form-group row mt-4">
 						<label for="old-password" class="col-sm-2 col-form-label text-right">原密码:</label>
 						<div class="col-sm-10">
-							<input type="password" class="form-control" id="old-password" placeholder="请输入原始密码!" required>
-							<div class="invalid-feedback">
+							<input type="password" th:class="|form-control ${error!=null?'is-invalid':''}|"
+								   id="old-password" name="oldPasword" placeholder="请输入原始密码!" required>
+							<div class="invalid-feedback" th:text="${oldError}">
 								密码长度不能小于8位!
 							</div>							
 						</div>
@@ -99,8 +101,9 @@
 					<div class="form-group row mt-4">
 						<label for="new-password" class="col-sm-2 col-form-label text-right">新密码:</label>
 						<div class="col-sm-10">
-							<input type="password" class="form-control" id="new-password" placeholder="请输入新的密码!" required>
-							<div class="invalid-feedback">
+							<input type="password" th:class="|form-control ${error!=null?'is-invalid':''}|"
+								   id="new-password" name="newPassword1" placeholder="请输入新的密码!" required>
+							<div class="invalid-feedback" th:text="${error}">
 								密码长度不能小于8位!
 							</div>							
 						</div>
@@ -108,8 +111,9 @@
 					<div class="form-group row mt-4">
 						<label for="confirm-password" class="col-sm-2 col-form-label text-right">确认密码:</label>
 						<div class="col-sm-10">
-							<input type="password" class="form-control" id="confirm-password" placeholder="再次输入新密码!" required>
-							<div class="invalid-feedback">
+							<input type="password" th:class="|form-control ${error!=null?'is-invalid':''}|"
+								   id="confirm-password" name="newPassword2" placeholder="再次输入新密码!" required>
+							<div class="invalid-feedback" th:text="${error}">
 								两次输入的密码不一致!
 							</div>								
 						</div>
